Crash in single-node CSRS on Windows with auth

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.12
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2016-08-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Seen here while Mongo Orchestration is trying to start a sharded cluster with two mongos servers, two standalone shards, and a single-node config server as replica set:

      https://evergreen.mongodb.com/version/57a7b8373ff12252cd00010a

      The config server crashes:

      2016-08-08T01:47:30.552+0100 I CONTROL  [rsSync] *** unhandled exception (access violation) at 0x000000013FE6F0A3, terminating
      2016-08-08T01:47:30.552+0100 I CONTROL  [rsSync] *** access violation was a read from 0x0000000000000000
      2016-08-08T01:47:30.552+0100 I CONTROL  [rsSync] *** stack trace for unhandled exception:
      2016-08-08T01:47:31.077+0100 I CONTROL  [rsSync] mongod.exe    ...\src\mongo\db\repl\replication_coordinator_external_state_impl.cpp(499)       mongo::repl::ReplicationCoordinatorExternalStateImpl::shardingOnDrainingStateHook+0xa3
      

      It appears not to happen unless auth is enabled. This is a nightly build from git hash 9cf1165c. Log and minidump attached. I believe that I can repro on demand.

        1. dbpath.tgz
          338 kB
        2. mongod.2016-08-08T00-47-31.mdmp
          1.61 MB
        3. mongod.log
          9 kB

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            A. Jesse Jiryu Davis
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: