SERVER-25475 Re-order mongod initialization to avoid segfault.

This ensures that the sharding system is initialized before the ReplicationCoordinator is started,
thus avoiding the possibility of the becoming primary before the ShardingCatalogManager has been
installed on the Grid object.